# BinaryImageToPoints

./: BinaryImageToPoints.cxx  CMakeLists.txt
